2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage): Fixlet
	to conditional USE_MOUSE.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/emoticondlg.cpp: Fix gcc-4.3 build.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/pcmanx_gtk2.cpp (main): Set env G_DEBUG=fatal_warnings to figure
	out GObject runtime warnings while --enable-debug.

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp
	(CMainFrame::OnShowHide) (CMainFrame::OnTray_Popup): clear way to wrap
	conditional USE_DOCKLET implementations.
	(char *ui_info): Refine menuitem/toolitem actions reflecting
	conditional USE_DOCKLET and USE_WGET.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* README: Reflected recent modifications.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termview.h (CopyToClipboard): Declared as virtual function.
	Prepared for advanced text processing.

2008-03-17  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termdata.cpp,
	src/core/termdata.h: Use dos2unix to remove CRLF.

2008-03-16  Jason Xia  <jasonxh@gmail.com>

	* src/core/termview.h, src/core/termview.cpp
	(CTermView::ClearSelection): Add ClearSelection method (using the code
	segment in OnLButtonDown).

	* src/core/termview.cpp (CTermView::OnLButtonDown),
	src/view/telnetview.cpp (CTelnetView::OnKeyDown): Make use of
	ClearSelection. 

	* src/view/telnetview.cpp (CTelnetView::OnKeyDown): Only clear
	selection if we handled the key event. (Fix the unusable hotkey Alt+O
	for copy.)

2008-03-16  Jason Xia  <jasonxh@gmail.com>

	* src/core/pcmanx_utils.h, src/core/termview.cpp,
	src/view/telnetview.cpp, src/view/telnetcon.cpp, src/mainframe.cpp,
	src/notebook.cpp, src/sitelistdlg.cpp: Remove the obsolete INFO macro.
	Rename INFO_ON to INFO. Remove unnecessary trailing new lines in DEBUG
	and INFO messages.

2008-03-13  Jason Xia  <jasonxh@gmail.com>

	* src/core/termdata.cpp (CTermData::PutChar): Discard chars exceeding